--- a/app/src/main/res/layout/fragment_routines.xml
+++ b/app/src/main/res/layout/fragment_routines.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.favourites.FavouritesFragment"
+    tools:context=".ui.routines.RoutinesFragment"
     android:orientation="vertical">
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:paddingTop="30dp"
-        android:id="@+id/destacadasRecView"
+        android:id="@+id/routinesRecView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
