--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,8 +10,25 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/section_highlights"
+        android:textStyle="bold"
+        android:textSize="@dimen/headerTextSize"
+        android:padding="40px"
+        >
+    </TextView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:paddingLeft="10dp"
+        android:id="@+id/highlightsRecView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        android:text="@string/section_routines"
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:text="@string/myRoutines_title"
         android:textStyle="bold"
         android:textSize="@dimen/headerTextSize"
         android:padding="40px"
@@ -27,6 +44,25 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:text="@string/recents_title"
+        android:textStyle="bold"
+        android:textSize="@dimen/headerTextSize"
+        android:padding="40px"
+        >
+
+    </TextView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:paddingLeft="10dp"
+        android:id="@+id/recentsRecView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 
