--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,6 +13,7 @@
         android:text="@string/section_highlights"
         android:textStyle="bold"
         android:textSize="@dimen/headerTextSize"
+        android:fontFamily="@font/google_sans_bold"
         android:padding="40px"
         >
     </TextView>
@@ -31,6 +32,7 @@
         android:text="@string/myRoutines_title"
         android:textStyle="bold"
         android:textSize="@dimen/headerTextSize"
+        android:fontFamily="@font/google_sans_bold"
         android:padding="40px"
         >
 
@@ -47,7 +49,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:fontFamily="@font/google_sans_bold"
         android:text="@string/recents_title"
         android:textStyle="bold"
         android:textSize="@dimen/headerTextSize"
