--- a/app/src/main/res/layout/routine_list_item.xml
+++ b/app/src/main/res/layout/routine_list_item.xml
@@ -51,6 +51,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="2dp"
+                    android:fontFamily="@font/google_sans_bold"
                     android:text="Routine"
                     android:textAppearance="?attr/textAppearanceHeadline6" />
 
@@ -62,6 +63,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="44dp"
                     android:padding="2dp"
+                    android:fontFamily="@font/google_sans"
                     android:text="Score: 1 out of 5"
                     android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="?android:attr/textColorSecondary" />
@@ -74,6 +76,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:padding="2dp"
+                    android:fontFamily="@font/google_sans"
                     android:text="Made by: Dagos"
                     android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="?android:attr/textColorSecondary" />
