--- a/app/src/main/res/layout/exercise_list_item.xml
+++ b/app/src/main/res/layout/exercise_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -8,57 +9,124 @@
     >
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/parent"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:layout_marginTop="12dp"
-        android:padding="8dp"
         android:gravity="center"
+        android:padding="8dp"
         app:cardBackgroundColor="@color/teal_200"
-        app:cardElevation="10dp"
         app:cardCornerRadius="15dp"
-        >
+        app:cardElevation="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="8dp">
 
-        <LinearLayout android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            >
+     <RelativeLayout android:layout_height="wrap_content"
+         android:layout_width="wrap_content">
+         <androidx.constraintlayout.widget.ConstraintLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+            android:id="@+id/collapsedRelLayout"
+             >
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:id="@+id/name"
-                android:paddingTop="12dp"
-                android:paddingBottom="6dp"
-                android:text="Exercise"
-                android:textAppearance="?attr/textAppearanceHeadline6"
-                >
+             <ImageView
+                 android:layout_width="25dp"
+                 android:layout_height="25dp"
+                 android:layout_marginStart="12dp"
+                 android:src="@drawable/ic_fitness"
 
-            </TextView>
-            <TextView android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
+                 app:layout_constraintBottom_toBottomOf="parent"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toTopOf="parent"
+                 app:layout_constraintVertical_bias="0.533">
 
-                android:text="Type"
-                android:layout_gravity="center"
-                android:textAppearance="?attr/textAppearanceSubtitle2"
-                android:id="@+id/type"
-                >
+             </ImageView>
 
-            </TextView>
-            <TextView android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
+             <ImageView
+                 android:id="@+id/expandMoreBtn"
+                 android:layout_width="25dp"
+                 android:layout_height="25dp"
+                 android:layout_marginEnd="16dp"
+                 android:src="@drawable/ic_expand_more"
+                 app:layout_constraintBottom_toBottomOf="parent"
 
-                android:text="Detail"
-                android:layout_gravity="center"
-                android:textAppearance="?attr/textAppearanceCaption"
-                android:id="@+id/detail"
-                >
+                 app:layout_constraintEnd_toEndOf="parent"
+                 app:layout_constraintTop_toTopOf="parent"
+                 app:layout_constraintVertical_bias="0.533">
 
-            </TextView>
+             </ImageView>
 
-        </LinearLayout>
+             <TextView
+                 android:id="@+id/name"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_marginStart="48dp"
+                 android:paddingTop="6dp"
+
+                 android:paddingBottom="6dp"
+                 android:text="Exercise"
+                 android:textSize="20sp"
+
+
+                 app:layout_constraintBottom_toBottomOf="parent"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toTopOf="parent"
+                 app:layout_constraintVertical_bias="0.0">
+
+             </TextView>
+
+
+         </androidx.constraintlayout.widget.ConstraintLayout>
+
+         <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_below="@+id/collapsedRelLayout"
+             android:id="@+id/expandedConstraintLayout"
+             android:visibility="gone"
+             >
+
+             <TextView
+                 android:id="@+id/type"
+                 android:fontFamily="@font/google_sans_italic"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_marginStart="16dp"
+                 android:layout_marginTop="8dp"
+                 android:text="Type of exercise"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toTopOf="parent" />
+
+             <TextView
+                 android:id="@+id/detail"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_marginStart="16dp"
+                 android:layout_marginTop="10dp"
+                 android:layout_marginBottom="10dp"
+                 android:text="Description"
+                 app:layout_constraintBottom_toBottomOf="parent"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toBottomOf="@+id/type"
+                 app:layout_constraintVertical_bias="1.0" />
+
+
+             <ImageView
+                 android:id="@+id/expandLessBtn"
+                 android:layout_width="25dp"
+                 android:layout_height="25dp"
+                 android:layout_marginEnd="16dp"
+                 android:layout_marginBottom="8dp"
+                 android:src="@drawable/ic_expand_less"
+                 app:layout_constraintBottom_toBottomOf="parent"
+                 app:layout_constraintEnd_toEndOf="parent">
+
+             </ImageView>
+         </androidx.constraintlayout.widget.ConstraintLayout>
+
+     </RelativeLayout>
 
     </com.google.android.material.card.MaterialCardView>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
