--- a/app/src/main/res/layout/activity_routine.xml
+++ b/app/src/main/res/layout/activity_routine.xml
@@ -89,7 +89,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/exercisesRecView"
+                android:id="@+id/cyclesRecView"
                 >
 
             </androidx.recyclerview.widget.RecyclerView>
