--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,48 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".ui.login.LoginActivity">
+
 
     <ImageView
         android:layout_width="301dp"
         android:layout_height="179dp"
-
+        android:layout_marginBottom="40dp"
         android:src="@drawable/logo"
-        app:layout_constraintBottom_toTopOf="@+id/username"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+         />
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="225dp"
-        android:layout_height="63dp"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:hint="@string/password_hint"
-        android:inputType="textPassword"
-        android:maxLength="20"
-        app:layout_constraintEnd_toEndOf="@+id/username"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/username"
-        app:layout_constraintTop_toBottomOf="@+id/username" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_gravity="center_horizontal">
+
+        <ImageView
+            android:layout_marginRight="20dp"
+            android:layout_width="40dp"
+            android:layout_height="63dp"
+            android:src="@drawable/ic_account">
+
+        </ImageView>
+
+        <EditText
+            android:id="@+id/username"
+            android:layout_width="225dp"
+            android:layout_height="63dp"
+            android:ems="10"
+            android:hint="@string/user_hint"
+
+            android:inputType="textPersonName"
+            android:maxLength="20"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_gravity="center_horizontal">
+
+        <ImageView
+            android:layout_marginRight="20dp"
+            android:layout_width="40dp"
+            android:layout_height="63dp"
+            android:src="@drawable/ic_password">
+
+        </ImageView>
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="225dp"
+            android:layout_height="63dp"
+            android:ems="10"
+            android:hint="@string/password_hint"
+            android:inputType="textPassword"
+            android:maxLength="20"
+            />
+    </LinearLayout>
+
+
+
 
     <Button
         android:id="@+id/loginBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/log_in"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        android:drawableRight="@drawable/ic_login"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.323"
+        android:layout_marginTop="10dp"
+        android:drawableEnd="@drawable/ic_login"
+
         android:fontFamily="@font/google_sans_bold"
         />
 
@@ -53,39 +89,19 @@
         android:layout_marginTop="116dp"
         android:text="@string/register_text"
 
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        />
 
     <Button
         android:id="@+id/registerBtn"
-        android:backgroundTint="@color/primaryTextColor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="@string/register"
-
+        android:backgroundTint="@color/primaryTextColor"
         android:fontFamily="@font/google_sans_bold"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.1" />
 
-    <EditText
-        android:id="@+id/username"
-        android:layout_width="225dp"
-        android:layout_height="63dp"
-        android:layout_marginTop="316dp"
-        android:ems="10"
-        android:hint="@string/user_hint"
-
-        android:inputType="textPersonName"
-        android:maxLength="20"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/register"
+        android:textStyle="bold" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
