--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,26 +13,12 @@
         tools:context=".ui.perfil.PerfilFragment">
 
 
-        <ImageButton
-            android:id="@+id/profile_config_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:adjustViewBounds="true"
-            android:backgroundTint="#00FFFFFF"
-            android:minHeight="48dp"
-            android:src="@drawable/baseline_settings_black_24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="?android:attr/textColorPrimary" />
-
         <TextView
-            android:id="@+id/profile_nombre_apellido"
+            android:id="@+id/profile_username"
             android:layout_width="171dp"
             android:layout_height="28dp"
-            android:layout_marginTop="16dp"
-            android:text="Nombre Apellido"
+            android:layout_marginTop="216dp"
+            android:text="@string/user_hint"
             android:textAlignment="center"
             android:textColor="?android:attr/textColorPrimary"
             android:textSize="20sp"
@@ -40,84 +26,19 @@
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_avatar_image" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/profile_username"
+            android:id="@+id/profile_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="usuario"
+            android:layout_marginTop="256dp"
+            android:text="@string/email_hint"
             android:textColor="?android:attr/textColorSecondary"
             android:textColorHint="#636060"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_nombre_apellido" />
-
-        <Button
-            android:id="@+id/mis_datos"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:elevation="0dp"
-            android:text="Mis datos"
-            android:textAlignment="textStart"
-            android:textColor="@color/white"
-            android:visibility="visible"
-            app:backgroundTint="@color/colorAccent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider2"
-            app:rippleColor="@color/material_on_primary_emphasis_high_type" />
-
-        <Button
-            android:id="@+id/mis_rutinas"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:elevation="0dp"
-            android:text="mis rutinas"
-            android:textAlignment="textStart"
-            android:textColor="@color/design_default_color_on_primary"
-            android:visibility="visible"
-            app:backgroundTint="?android:attr/colorAccent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mis_datos" />
-
-        <Button
-            android:id="@+id/mis_ejercicios"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:elevation="0dp"
-            android:text="mis ejercicios"
-            android:textAlignment="textStart"
-            android:textColor="@color/design_default_color_on_primary"
-            android:visibility="visible"
-            app:backgroundTint="?android:attr/colorAccent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mis_rutinas" />
-
-        <ImageView
-            android:id="@+id/profile_avatar_image"
-            android:layout_width="191dp"
-            android:layout_height="116dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="20dp"
-            android:src="@drawable/avatar"
-            android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/profile_nombre_apellido"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.526"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -125,27 +46,93 @@
             android:id="@+id/divider2"
             android:layout_width="729dp"
             android:layout_height="1dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="48dp"
             android:background="?android:attr/listDivider"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/profile_username" />
 
-        <ToggleButton
-            android:id="@+id/toggleButton"
-            android:layout_width="wrap_content"
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="100dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="158dp"
+            android:layout_marginBottom="12dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/avatar"
+            app:layout_constraintBottom_toTopOf="@+id/button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="171dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="161dp"
-            android:layout_marginTop="488dp"
-            android:layout_marginEnd="162dp"
-            android:layout_marginBottom="195dp"
-            android:text="Logout"
-            android:textColor="#455A64"
+            android:layout_gravity="center"
+            android:layout_marginBottom="529dp"
+            android:backgroundTint="@color/white"
+            android:onClick="onUploadPhotoTapped"
+            android:text="@string/profile_photo"
+            android:textColor="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
+        <EditText
+            android:id="@+id/editTextTextPersonName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:layout_marginEnd="95dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:minHeight="48dp"
+            android:text="@string/profile_first_name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider2" />
+
+        <EditText
+            android:id="@+id/editTextTextPersonName2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="29dp"
+            android:layout_marginEnd="95dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:minHeight="48dp"
+            android:text="@string/profile_last_name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+
+        <EditText
+            android:id="@+id/editTextPhone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="93dp"
+            android:ems="10"
+            android:inputType="phone"
+            android:minHeight="48dp"
+            android:text="@string/profile_phone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="51dp"
+            android:layout_marginEnd="143dp"
+            android:backgroundTint="@color/colorAccent"
+            android:onClick="onSaveTapped"
+            android:text="@string/profile_save"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
