--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -7,15 +7,28 @@
     tools:context=".ui.register.ConfirmationActivity">
 
     <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="301dp"
-        android:layout_height="179dp"
 
+        android:layout_height="179dp"
         android:src="@drawable/logo"
         app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="4dp"
+        android:text="@string/verification"
+        android:textAppearance="?attr/textAppearanceHeadline6"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toTopOf="@+id/email"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        tools:layout_editor_absoluteX="-16dp" />
 
     <EditText
         android:id="@+id/code"
