--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.register.ConfirmationActivity">
 
+
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="301dp"
@@ -14,9 +15,9 @@
         android:src="@drawable/logo"
         app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.333" />
 
     <TextView
         android:layout_width="match_parent"
@@ -26,9 +27,10 @@
         android:text="@string/verification"
         android:textAppearance="?attr/textAppearanceHeadline6"
         android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@+id/email"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        tools:layout_editor_absoluteX="-16dp" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp" />
 
     <EditText
         android:id="@+id/code"
@@ -63,7 +65,7 @@
         android:id="@+id/email"
         android:layout_width="225dp"
         android:layout_height="63dp"
-        android:layout_marginTop="316dp"
+        android:layout_marginTop="380dp"
         android:ems="10"
         android:hint="@string/email_hint"
 
@@ -71,7 +73,18 @@
         android:maxLength="20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="358dp"
+        android:layout_height="53dp"
+        android:text="@string/verification_text"
+        app:layout_constraintBottom_toTopOf="@+id/email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.738" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
