--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -50,8 +50,8 @@
             android:background="?android:attr/listDivider"
             android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@+id/firstName"
-            app:layout_constraintTop_toBottomOf="@+id/profile_email"
-            tools:layout_editor_absoluteX="-159dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profile_email" />
 
         <ImageView
             android:id="@+id/avatar"
@@ -86,6 +86,7 @@
             android:ems="10"
             android:hint="@string/profile_first_name"
             android:inputType="textPersonName"
+            android:maxLength="20"
             android:minHeight="48dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/profile_email" />
@@ -99,6 +100,7 @@
             android:ems="10"
             android:hint="@string/profile_last_name"
             android:inputType="textPersonName"
+            android:maxLength="20"
             android:minHeight="48dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/firstName" />
@@ -130,7 +132,7 @@
             app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/saveBtn"
             android:layout_width="125dp"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
