--- a/app/src/main/res/layout/burger_navigation.xml
+++ b/app/src/main/res/layout/burger_navigation.xml
@@ -2,8 +2,11 @@
 <com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:menu="@menu/navigation_menu"
+    app:itemTextAppearance="@style/NavigationText"
+
     >
 
 
