ahora si mas piola

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -35,6 +35,10 @@
     </LinearLayout>
 
     <View
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:background="@color/colorAccent"
         android:layout_height="2dp" android:layout_width="match_parent"
         >
